finished up the front view

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,22 +24,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>1</td>
-                            <td>Username</td>
-                            <td>davidsureway@gmail.com</td>
-                            <td>Male</td>
-                            <td>Active</td>
-                            <td>
-                                <a href="#" class='btn border-shadow update'>
-                                    <span class="text-gradient"><i class="fas fa-pencil-alt"></i></span>
-                                </a>
-                                <a class='btn border-shadow delete'>
-                                    <span class="text-gradient"><i class="fas fa-times"></i></span>
-                                </a>
-                            </td>
-                            <td></td>
-                        </tr>
+                        <%- include('include/_show') %>
                     </tbody>
                 </table>
             </form>
